--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,14 @@
+django-solo-grappelli-1.1.1
+===========================
+
+Date: September 19, 2015
+
+* Updated templates to work fine with Django-Grappelli
+
+
+* * *
+
+
 django-solo-1.1.0
 =================
 
